--- a/app/templates/booking_flow.html
+++ b/app/templates/booking_flow.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% set immersive = true %}
 {% block head %}
 <style>
   /* ===== موبايل فاخر على نمط Uber/Airbnb ===== */
